--- a/heart-attack-prediction-analysis.ipynb
+++ b/heart-attack-prediction-analysis.ipynb
@@ -32,6 +32,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### EDA Insights: \n",
+    "- Correlation analysis highlighted LDL cholesterol as a strong predictor, while other lifestyle factors like smoking and obesity showed weaker associations than expected.\n",
+    "\n",
+    "#### Model Performance:\n",
+    "- Logistic Regression: Achieved an AUC of 0.518, indicating poor predictive power.\n",
+    "- Random Forest: Significantly outperformed with an AUC of 0.907, demonstrating strong classification ability.\n",
+    "\n",
+    "#### Key Takeaways：\n",
+    "- Age, LDL cholesterol levels, alcohol consumption, and emergency response time were significantly associated with heart attack risk.\n",
+    "- Machine learning models, particularly Random Forest, enhance heart attack risk prediction by capturing complex variable interactions.\n",
+    "- Future research should integrate additional biomarkers, such as inflammatory markers, to refine predictive accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Introduction"
    ]
   },
@@ -103,7 +120,7 @@
    "source": [
     "### Literature Context\n",
     "\n",
-    "Additionally, we will review existing literature on cardiovascular health, particularly studies that analyze heart attack risk factors in different populations. One relevant study is \"Number of years with obesity and incident heart failure among US adults (Ndumele, 2018).\" Research found that long-term obesity duration is an independent risk factor for heart damage, even in the absence of traditional risk factors like hypertension or diabetes. The longer an individual remains overweight or obese, the higher their risk of heart disease. \n",
+    "Additionally, we will review existing literature on cardiovascular health, particularly studies that analyze heart attack risk factors in different populations. One relevant study is \"Number of years with obesity and incident heart failure among US adults (Ndumele et al., 2018).\" Research found that long-term obesity duration is an independent risk factor for heart damage, even in the absence of traditional risk factors like hypertension or diabetes. The longer an individual remains overweight or obese, the higher their risk of heart disease. \n",
     "\n",
     "Another research by WHO, \"Cardiovascular diseases\", examines how unhealthy lifestyle behaviors, including poor diet, physical inactivity, smoking, and excessive alcohol consumption, become major contributors to cardiovascular diseases (WHO, 2017). "
    ]
@@ -1385,6 +1402,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Among the 26 variables examined, Age, Alcohol Consumption, LDL Cholesterol Level, and Emergency Response Time demonstrated notable correlations with heart attack risk. Notably, LDL level was found to be a significant predictor (p = 0.0328), aligning with prior studies that emphasize its role in cardiovascular diseases (Ndumele et al., 2014).\n",
+    "\n",
+    "Besides, we deploy two models to evaluated for predictive accuracy: a logistic regression model and a Random Forest model. The logistic regression model yielded an AUC value of 0.518, indicating poor discriminatory power. In contrast, the Random Forest model significantly outperformed with an AUC value of 0.907, demonstrating a strong ability to distinguish between individuals at high and low risk for heart attacks. The Random Forest model’s success can be attributed to its ability to capture complex interactions between risk factors.\n",
+    "\n",
+    "These findings emphasize the importance of LDL cholesterol levels in heart attack risk prediction. The strong performance of the Random Forest model suggests that non-linear relationships play a crucial role in cardiovascular risk assessment. Future research should consider incorporating additional physiological indicators, such as inflammatory markers, which have been shown to further refine heart disease prediction models (Ridker et al., 2018)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Reference"
    ]
   },
@@ -1394,7 +1422,9 @@
    "source": [
     "1. Ndumele, C. E., Matsushita, K., Lazo, M., Bello, N., Blumenthal, R. S., Gerstenblith, G., Nambi, V., Ballantyne, C. M., Solomon, S. D., Selvin, E., Folsom, A. R., & Coresh, J. (2014). Obesity, subclinical myocardial injury, and incident heart failure. JACC: Heart Failure, 2(6), 600–607.\n",
     "https://doi.org/10.1016/j.jchf.2014.05.017\n",
-    "3. World Health Organization. (2017). Cardiovascular diseases (CVDs). Retrieved from https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)"
+    "2. Panday, A. (2025). Heart Attack Risk & Prediction Dataset in India [Dataset]. Kaggle. https://www.kaggle.com/datasets/ankushpanday2/heart-attack-risk-and-prediction-dataset-in-india\n",
+    "3. Ridker, P. M., Everett, B. M., Thuren, T., MacFadyen, J. G., Chang, W. H., Ballantyne, C., ... & CANTOS Trial Group. (2018). Antiinflammatory therapy with canakinumab for atherosclerotic disease. New England Journal of Medicine, 377(12), 1119-1131. https://doi.org/10.1056/NEJMoa1707914\n",
+    "4. World Health Organization. (2017). Cardiovascular diseases (CVDs). Retrieved from https://www.who.int/news-room/fact-sheets/detail/cardiovascular-diseases-(cvds)"
    ]
   },
   {
