Add texts to the analysis.ipynb part 3

--- a/heart-attack-prediction-analysis.ipynb
+++ b/heart-attack-prediction-analysis.ipynb
@@ -142,7 +142,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To start off, we will load the appropriate libraries and tidy the dataset. We want to make sure there is no Null Value in our dataset and not all variables are important to our research question.\n",
+    "- Patient ID and State Names (These are meaningless to us)\n",
+    "- Gender (We don't have to contain any bias in our research)"
+   ]
   },
   {
    "cell_type": "code",
@@ -522,6 +526,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table 1:** A tidy dataset, with unnecessary columns removed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -745,6 +756,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table 2:** Results of a logistic model using all attributes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
@@ -793,6 +811,13 @@
     "    filter(term != \"(Intercept)\" & p.value < 0.15) |>\n",
     "    pull(term)\n",
     "significant_vars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We only want to contain significant attributes"
    ]
   },
   {
@@ -872,6 +897,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table 3:** Simplified dataset with significant attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If there are high correlation between two variables, we can choose one of them in our simplified model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
@@ -914,6 +953,13 @@
     "    theme(text = element_text(size = 15))\n",
     "\n",
     "heart_attack_pair_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 1:** A pairwise scatterplot of each of the variables in the simplified model"
    ]
   },
   {
@@ -969,6 +1015,13 @@
     "\n",
     "\n",
     "plot_corr_matrix_heart_attact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Figure 2:** A correlation heatmap of each of the variables in the simplified model."
    ]
   },
   {
@@ -1029,80 +1082,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>Age</th><th scope=col>Alcohol_Consumption</th><th scope=col>LDL_Level</th><th scope=col>Emergency_Response_Time</th><th scope=col>Heart_Attack_Risk</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>42</td><td>1</td><td> 93</td><td>157</td><td>0</td></tr>\n",
-       "\t<tr><td>26</td><td>2</td><td>153</td><td>331</td><td>0</td></tr>\n",
-       "\t<tr><td>78</td><td>1</td><td>130</td><td>186</td><td>0</td></tr>\n",
-       "\t<tr><td>58</td><td>1</td><td>130</td><td>324</td><td>0</td></tr>\n",
-       "\t<tr><td>22</td><td>1</td><td>150</td><td>209</td><td>1</td></tr>\n",
-       "\t<tr><td>31</td><td>1</td><td>105</td><td> 93</td><td>0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " Age & Alcohol\\_Consumption & LDL\\_Level & Emergency\\_Response\\_Time & Heart\\_Attack\\_Risk\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 42 & 1 &  93 & 157 & 0\\\\\n",
-       "\t 26 & 2 & 153 & 331 & 0\\\\\n",
-       "\t 78 & 1 & 130 & 186 & 0\\\\\n",
-       "\t 58 & 1 & 130 & 324 & 0\\\\\n",
-       "\t 22 & 1 & 150 & 209 & 1\\\\\n",
-       "\t 31 & 1 & 105 &  93 & 0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 5\n",
-       "\n",
-       "| Age &lt;dbl&gt; | Alcohol_Consumption &lt;dbl&gt; | LDL_Level &lt;dbl&gt; | Emergency_Response_Time &lt;dbl&gt; | Heart_Attack_Risk &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "| 42 | 1 |  93 | 157 | 0 |\n",
-       "| 26 | 2 | 153 | 331 | 0 |\n",
-       "| 78 | 1 | 130 | 186 | 0 |\n",
-       "| 58 | 1 | 130 | 324 | 0 |\n",
-       "| 22 | 1 | 150 | 209 | 1 |\n",
-       "| 31 | 1 | 105 |  93 | 0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Age Alcohol_Consumption LDL_Level Emergency_Response_Time Heart_Attack_Risk\n",
-       "1 42  1                    93       157                     0                \n",
-       "2 26  2                   153       331                     0                \n",
-       "3 78  1                   130       186                     0                \n",
-       "4 58  1                   130       324                     0                \n",
-       "5 22  1                   150       209                     1                \n",
-       "6 31  1                   105        93                     0                "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "head(heart_attack_data_simplified)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {
     "vscode": {
@@ -1149,6 +1128,22 @@
    ],
    "source": [
     "vif(heart_attack_simplified_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to verify the VIFs of the simplified model to identify if multicollinearity exists\n",
+    "\n",
+    "All variables have low VIF value, which is a good sign"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we will split our simplified data into training (70%) and testing (30%)"
    ]
   },
   {
@@ -1315,6 +1310,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Although our logisit model's accuracy is not very bad (70%). The roc looks ugly and thus the auc is low.\n",
+    "\n",
+    "We need to try a more complex model on our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Forest Model"
    ]
   },
@@ -1389,6 +1393,13 @@
     "cat(\"Random Forest AUC Value:\", auc_value_rf, \"\\n\")\n",
     "\n",
     "plot(roc_curve_rf, main = \"Random Forest ROC\", col = 'red', lwd = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By setting the appropriate parameters for our Random Forest model, we get an excellent model that can accurately predict the risk of heart attack."
    ]
   },
   {
