Delete all install packages except GGalley and one extra line

--- a/heart-attack-prediction-analysis.ipynb
+++ b/heart-attack-prediction-analysis.ipynb
@@ -55,11 +55,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Background Information\n",
     "\n",
@@ -150,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -167,7 +162,7 @@
     }
    ],
    "source": [
-    "install.packages(c(\"tidyverse\", \"repr\", \"broom\", \"GGally\", \"glmnet\", \"corrplot\", \"car\", \"caret\", \"randomForest\"))"
+    "install.packages(\"GGally\")"
    ]
   },
   {
